# Fast-Sound-System

./: CMakeLists.txt  Info.plist  README.md  aubout.cpp  aubout.h  aubout.ui  audio_loader.cpp  audio_loader.h  comboboxdelegate.cpp  comboboxdelegate.h  edit.cpp  edit.h  edit.ui  filemanagerdialog.cpp  filemanagerdialog.h  filemanagerdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ressources.qrc  styles.qss  workflow.yml
.github/workflows/: main.yml
